--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@angular/animations": "^15.2.9",
     "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.2.0",
+    "@angular/common": "^15.2.9",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "^15.2.0",
+    "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@fortawesome/angular-fontawesome": "^0.12.1",
@@ -29,13 +29,17 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
+    "@ngtools/webpack": "^15.2.2",
     "bootstrap": "^5.3.1",
+    "core-decorators": "^0.20.0",
     "date-fns": "^2.30.0",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
+    "ng-select2-component": "^11.1.0",
+    "ng2-select2": "^1.0.0-beta.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
