--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ng-select2-component": "^11.1.0",
     "ng2-select2": "^1.0.0-beta.15",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.20",
     "tslib": "^2.3.0",
     "zone.js": "^0.12.0"
   },
