--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^2.30.0",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
+    "ng-chartjs": "^0.2.7",
     "ng-select2-component": "^11.1.0",
     "ng2-select2": "^1.0.0-beta.15",
     "rxjs": "~7.8.0",
