--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "eslint src"
   },
   "private": true,
   "dependencies": {
@@ -36,8 +37,8 @@
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
     "ng-chartjs": "^0.2.7",
-    "ng-select2-component": "^11.1.0",
-    "ng2-select2": "^1.0.0-beta.15",
+    "ng-select2-component": "^11.0.0",
+    "ngx-select-ex": "^8.0.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.20",
     "tslib": "^2.3.0",
@@ -49,6 +50,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
+    "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
