--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "eslint src"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -31,13 +30,15 @@
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@ngtools/webpack": "^15.2.2",
+    "@types/bootstrap": "^5.2.6",
     "bootstrap": "^5.3.1",
     "core-decorators": "^0.20.0",
     "date-fns": "^2.30.0",
-    "jquery": "^3.7.0",
+    "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "ng-chartjs": "^0.2.7",
     "ng-select2-component": "^11.0.0",
+    "ngx-bootstrap": "^10.3.0",
     "ngx-select-ex": "^8.0.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.20",
@@ -49,7 +50,7 @@
     "@angular/cli": "~15.2.9",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
-    "@types/jquery": "^3.5.16",
+    "@types/jquery": "^3.5.18",
     "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
