--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ckeditor/ckeditor5-angular": "^7.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^39.0.2",
+    "@ckeditor/ckeditor5-core": "^39.0.2",
+    "@ckeditor/ckeditor5-engine": "^39.0.2",
+    "@ckeditor/ckeditor5-utils": "^39.0.2",
+    "@ckeditor/ckeditor5-watchdog": "^39.0.2",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
